--- a/omglol/now/now.css
+++ b/omglol/now/now.css
@@ -1,7 +1,10 @@
 .now-games {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
-    gap: 20px;
+    grid-template-columns: repeat(4, 1fr);
+    padding: 0 25px;
+    gap: 1rem;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
   
 .now-game:hover {
